tests/N3Tests/jen3_syntax/pos/iri2-ref.n3
<iri2.n3#o> <http://www.w3.org/2000/10/swap/log#implies> <iri2.n3#s> .